<resources>
    <string name="app_name">SimpleWeatherAppV1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nickname</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Сегодня</string>
    <string name="menu_gallery">По часам</string>
    <string name="menu_slideshow">Выбор города</string>
    <string name="humidity">image</string>
    <string name="testbarometr">testBarometr</string>
    <string name="inputCity">Выбор города</string>
    <string name="click">string</string>
    <string name="Click">image</string>
    <string name="time1">9:00</string>
    <string name="time2">11:00</string>
    <string name="time3">13:00</string>
    <string name="time4">18:00</string>
    <string name="time6">19:00</string>
    <string name="temp1">18</string>
    <string name="temp2">22</string>
    <string name="temp3">24</string>
    <string name="temp4">20</string>
    <string name="temp5">20</string>
    <string name="sun">sun</string>
    <string name="textNameCity">Название города</string>
    <string name="tempPic">термометр</string>
    <string name="windPic">скоростьветра</string>
    <string name="tempToDay">+22</string>
    <string name="windToDay">6</string>
    <string name="humidityPic">влажность</string>
    <string name="windSpeedPic">скоростьветра</string>
    <string name="himidityToDay">50</string>
    <string name="pressToDay">4</string>
    <string name="storm">image</string>
    <string name="textDialog">Оставить отзыв</string>
    <string name="stringButtonDialogNo">Нет</string>
    <string name="buttonDialogYes">Да</string>
    <string name="buttomDialogNo">Нет</string>
    <string name="cityInputEditText">Город</string>
    <string name="seartchCityButton">Поиск</string>
</resources>