<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textDialog"
            android:textColor="#0E0101"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonDialogYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonDialogYes" />

        <Button
            android:id="@+id/buttonDialogNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttomDialogNo" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>