<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue"
    tools:context=".ui.hourFragment.HourFragment">

    <!--test-->
    <FrameLayout
        android:layout_width="391dp"
        android:layout_height="302dp"
        android:background="@drawable/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        tools:context=".hourWeatherFragment">

        <TableLayout
            android:id="@+id/weatherOfHourLayout"
            android:layout_width="wrap_content"
            android:layout_height="117dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="69dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time1"
                    android:textColor="#131313"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time2"
                    android:textColor="#0B0A0A"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time3"
                    android:textColor="#0B0A0A"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="77dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time4"
                    android:textColor="#100F0F"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="91dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time6"
                    android:textColor="#0B0A0A"
                    android:textSize="24sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/temp1"
                    android:textColor="#0C0C0C"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/temp2"
                    android:textColor="#090909"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/temp3"
                    android:textColor="#070707"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/temp4"
                    android:textColor="#050505"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/temp5"
                    android:textColor="#0B0A0A"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="58dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/sun"
                    android:gravity="center"
                    app:srcCompat="@drawable/sun" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="79dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/sun"
                    android:gravity="center"
                    app:srcCompat="@drawable/sun" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="67dp"
                    android:layout_height="37dp"
                    android:contentDescription="@string/sun"
                    android:gravity="center"
                    app:srcCompat="@drawable/sun" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="73dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/sun"
                    android:gravity="center"
                    app:srcCompat="@drawable/sun" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="52dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/sun"
                    android:gravity="center"
                    app:srcCompat="@drawable/sun" />
            </TableRow>

        </TableLayout>


    </FrameLayout>

    <TextView
        android:id="@+id/text_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

</androidx.constraintlayout.widget.ConstraintLayout>